@@ -14,6 +14,7 @@ Version: 0.1.3
     - Fix the condition for repeatstat resolving references starting at the parent scope
       For example the condition in `repeat local foo; until foo` would index into `_ENV`
     - Fix scope bodies referring to the parent scope instead of the current scope
+    - Fix 'goto's to the end of a repeatstat block being allowed no matter what
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2022-01-29
